[package]
name = "svg-hush"
authors = ["Cloudflare <https://cloudflare.com>"]
version = "0.9.1"
edition = "2021"
description = "Strip scripting and other abusable features from SVG files"
categories = ["multimedia::images"]
keywords = ["xss", "sanitizer", "purify", "filter", "security"]
license = "Apache-2.0 OR MIT"
exclude = ["tests/"]
repository = "https://github.com/cloudflare/svg-hush"
rust-version = "1.57"

[dependencies]
once_cell = "1.15.0"
data-url = "0.2.0"
base64 = "0.13.0"
quick-error = "2.0.1"
url = "2.3.1"
xml-rs = "0.8.14"

[package.metadata.release]
tag-name = "{{version}}"
