[package]
name = "svg-hush-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.svg-hush]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.dev]
debug = 1
opt-level = 3

[profile.release]
debug = 1
debug-assertions = true

[[bin]]
name = "filter"
path = "fuzz_targets/filter.rs"
test = false
doc = false

[[bin]]
name = "url"
path = "fuzz_targets/url.rs"
test = false
doc = false

[[bin]]
name = "idempotent"
path = "fuzz_targets/idempotent.rs"
test = false
doc = false
